--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Plack-Middleware-Memento
 
 {{$NEXT}}
+        - Fix pod
 
 0.01  2017-05-19 12:13:36 CEST
         - Initial release
