--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Plack-Middleware-Memento
 
 {{$NEXT}}
+        - Only examine GET and HEAD requests
 
 0.0101  2017-05-19 12:18:38 CEST
         - Fix pod
